# azure-iot-mobility-digitaltwin

./: CODE_OF_CONDUCT.md  README.md
DTDLv2/VSS/: volkswagen_jetta_2016.json
DTDLv2/VSS/Body/: body.json  chargingport.json  hood.json  horn.json  lights-all.json  lights-fog.json  lights.json  mirrors.json  raindetection.json  trunk.json  windshield.json  windshieldfluid.json  windshieldheating.json  windshieldwiper.json  windshieldwiper_old.json
DTDLv2/VSS/Cabin/: cabin.json  hvac.json  sunroof.json
DTDLv2/VSS/Chassis/: accelerator.json  axle.json  brake.json  chassis.json  parkingbrake.json  steeringwheel.json  tire.json  trailer.json  wheel.json
DTDLv2/VSS/Vehicle/: ivehicle.json  vehicle.json  vehicleSpatialAccelerationTelemetry.json  vehicleSpatialRotationTelemetry.json  vehicleTelemetry.json
VSS/Chassis/: chassis.json
tools/: install-packages.sh
tools/src/: CMakeLists.txt
tools/src/dtdl-definition/: .gitignore  CMakeLists.txt  dtdl-composer.cpp  dtdl-composer.h  dtdl-definition.cpp  dtdl-definition.h
tools/src/vspec-definition/: .gitignore  CMakeLists.txt  vspec-definition.h  vspec-parser.cpp  vspec-parser.h
tools/src/vspec-to-dtdl/: .gitignore  CMakeLists.txt  program.cpp  run-test.sh  vspec-to-dtdl-converter.cpp  vspec-to-dtdl-converter.h
